налажена передача сообщений между пользвателями и чатом